k8schl-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: k8schl-service
spec:
  selector:
    app: k8schl
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort
