k8s-challenge-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8sc-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: k8sc-service
          servicePort: 80
