k8schl-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8schl-ingress
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: k8schl-service
          servicePort: 80
